# shuriken-llm

./: .gitignore  CHANGELOG.md  README.md  __main__.py  example-config.yml  pyproject.toml  shuriken.py
.github/workflows/: ci.yml
adapters/: openai.py
analysis/: detectors.py
core/: config.py
docs/: CONFIG.md  EXTENDING.md  PAYLOADS.md
examples/: batch_multiturn.yaml  matrix.yaml  single.yaml
payloads/: __init__.py
reporters/: __init__.py  html_reporter.py  sqlite_reporter.py
runners/: __init__.py  async_runner.py  sequential.py  worker.py
shuriken/: __init__.py
shuriken.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shuriken/adapters/: __init__.py  anthropic.py  base.py  ollama.py
shuriken/analysis/: __init__.py  scoring.py
shuriken/core/: __init__.py  canary.py  engine.py  types.py
shuriken/payloads/: mutators.py  registry.py
shuriken/reporters/: csv_reporter.py  html_reporter.py  json_reporter.py  markdown.py
shuriken/tools/: live_tools.py
tests/: test_core.py
tools/: __init__.py  mock_tools.py
